# doc-storage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  private.pem  private.refresh.pem  public.pem  public.refresh.pem  recipe.json  rustfmt.toml  start-minio.bat
.github/: dependabot.yml
.github/workflows/: ci-dev.yml  ci-prod.yml
Camp 2021 Troupe Vè Versailles/: 23-0465fb6ccb976527426b477d5cb7ca07-1860435.chunk  manifest.json
Cargo/: 0-1d30f1249b9877f51dcc9616db354c92-31602.chunk  0-973772b40ddb6db00345edc4b63a96fa-47165.chunk  0-b3ce360382830ee3599713ea151de6f4-47850.chunk  0-d99b7c7f618dc93827731f6529642322-47605.chunk  manifest.json
src/: constants.rs  lib.rs  main.rs
src/api/: errors.rs  mod.rs  payloads.rs  responses.rs  types.rs  uploader.rs  url.rs
src/api/handler/: auth.rs  authentication.rs  endpoints.rs  login.rs  mod.rs  upload.rs
src/api/utils/: errors.rs  mod.rs  payloads.rs  responses.rs  types.rs
src/auth/: user.rs
src/database/: mod.rs  redis.rs  s3.rs  traits.rs
src/jwt/: mod.rs  models.rs  token.rs
src/middleware/: auth.rs
src/oauth/: mod.rs  operations.rs  request.rs
src/redis/: client.rs  mod.rs
src/storage/: chunk.rs  compressor.rs  hasher.rs  mod.rs  models.rs
src/user/: auth.rs  mod.rs  models.rs  password.rs
src/user/api/: handlers.rs  mod.rs  payloads.rs  responses.rs
src/user/session/: mod.rs  models.rs  token.rs
src/utils/: constants.rs  mod.rs  types.rs
src/utils/api/: errors.rs  types.rs
src/utils/macros/: conditional.rs  mod.rs  ternary.rs
src/utils/traits/: mod.rs
