[package]
name = "doc-storage"
version = "0.1.0"
authors = ["Yggdrasil80 <louisdechorivit@gmail.com>"]
edition = "2021"
description = "Self-hosted file and document storage service"
readme = "README.md"
repository = "https://github.com/Yggdrasil80/doc-storage"
license = "GNU General Public License v3.0"
keywords = ["doc-storage", "document", "storage", "file", "self-hosted"]

[dependencies]
redis = "0.21.6"
serde_json = "1.0.85"
actix-web = "4.2.1"
md-5 = "0.10.4"

rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.flate2]
version = "1.0.24"
features = ["zlib"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "serde",
]