[package]
name = "doc-storage"
version = "0.1.0"
authors = ["nullptr.rs <nullptr.rs@gmail.com>"]
edition = "2021"
description = "A self-hosted file and document synchronisation service"
readme = "README.md"
repository = "https://github.com/nullptr-rs/doc-storage"
license = "GNU General Public License v3.0"
keywords = ["doc-storage", "document", "sync", "file", "self-hosted"]

[dependencies]
serde_json = "1.0.87"
actix-web = "4.2.1"
futures = "0.3.25"
actix-multipart = "0.4.0"
flate2 = "1.0.24"
async-trait = "0.1.58"
anyhow = "1.0.66"
argon2 = "0.4.1"
env_logger = "0.9.3"
log = "0.4.17"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1.23.1"
features = ["full"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.blake3]
version = "1.3.1"
features = ["rayon"]

[dependencies.redis]
version = "0.22.1"
features = ["tokio-comp"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",
    "serde",
]